--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,12 @@
     "primevue": "^3.53.0",
     "vee-validate": "^4.13.2",
     "vue": "^3.2.13",
+    "vue-router": "^4.4.5",
     "vuex": "^4.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/vue-router": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
