--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -32,7 +32,9 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "tests/**/*.tsx",
+    "src/shims-vue.d.ts",
+    "src/shims-png.d.ts"
   ],
   "exclude": [
     "node_modules"
