feat: Implement game and system screens, start server integration

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -34,7 +34,8 @@
     "tests/**/*.ts",
     "tests/**/*.tsx",
     "src/shims-vue.d.ts",
-    "src/shims-png.d.ts"
+    "src/shims-png.d.ts",
+    "src/**/*", "types/**/*"
   ],
   "exclude": [
     "node_modules"
