--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,17 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primevue": "^3.53.0",
     "vee-validate": "^4.13.2",
     "vue": "^3.2.13",
+    "vue-confetti": "^2.3.0",
     "vue-router": "^4.4.5",
     "vuex": "^4.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/vue-router": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
